--- a/frontend/src/pages/Login/Login.module.css
+++ b/frontend/src/pages/Login/Login.module.css
@@ -28,7 +28,7 @@
     letter-spacing: 1px;
     align-items: center;
     /*background-color: #ffffff;*/
-    border-radius: 8px;
+    /*border-radius: 8px;*/
 }
 
 .LogInElement{
