--- a/frontend/src/components/SortTab/SortTab.module.css
+++ b/frontend/src/components/SortTab/SortTab.module.css
@@ -28,3 +28,25 @@ select.SortTabContent{
 .SortTabContent:hover {
 	filter: brightness(0.8);
 }
+
+.searchTab{
+    display: grid;
+    grid-template-columns: 15% 15% 15% 15% 20%;
+}
+.searchBtn{
+    margin-left: 20px;
+    width: 30px;
+}
+.inputF{
+    height: 40px;
+    border-radius: 10px;
+}
+.Qbutton{
+    margin-left: 20px;
+    width: 30px;
+
+}
+
+.Qbutton:active{
+    color: coral;
+}
